--- a/app/src/main/res/layout/content_messages.xml
+++ b/app/src/main/res/layout/content_messages.xml
@@ -14,7 +14,8 @@
     tools:context=".Messages">
 
     <TextView
-        android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/smsNumberText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="NUMBER_GOES_HERE"/>
 </RelativeLayout>
