--- a/app/src/main/res/layout/content_messages.xml
+++ b/app/src/main/res/layout/content_messages.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -13,6 +13,28 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_messages"
     tools:context=".Messages">
+
+    <EditText
+        android:id="@+id/enterNumber"
+        android:hint="Recipient's Number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/enterMessage"
+        android:hint="Write your message here..."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/smsNumberText"
@@ -27,4 +49,5 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:text="NUMBER_GOES_HERE"/>
+    </LinearLayout>
 </LinearLayout>
