Changed inbox from two static TextViews to Dynamic TextView creation for messages

--- a/app/src/main/res/layout/content_messages.xml
+++ b/app/src/main/res/layout/content_messages.xml
@@ -34,23 +34,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:id="@+id/messageBlock"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
         <TextView
             android:id="@+id/smsNumberText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:text="NUMBER_GOES_HERE"/>
 
         <TextView
-            android:layout_toRightOf="@id/smsNumberText"
             android:id="@+id/smsBodyText"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:text="NUMBER_GOES_HERE"/>
+            android:text="BODY_GOES_HERE"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
